--- a/README
+++ b/README
@@ -292,6 +292,7 @@ Changelog
 
     *   0.1.0     03-06-2013  Initial import
     *   0.1.1     10-06-2013  Transaction context issues
+    *   0.1.2     11-06-2013  ContextManager commit issues
 
 Author
 ------
