--- a/README
+++ b/README
@@ -301,6 +301,7 @@ Changelog
     *   0.1.6     14-10-2014  - Bugfix. Fix import of OperationalError. Avoid use protected member of psycopg2.
                               - Change "from psycopg2._psycopg import OperationalError" to
                                 "from psycopg2 import OperationalError"
+    *   0.1.7     04-09-2015  - Created AutoCloseConnectionPool to use with pgpool.
 
 Author
 ------
