Creating a new Pool class for disable pooling

--- a/README
+++ b/README
@@ -302,6 +302,11 @@ Changelog
                               - Change "from psycopg2._psycopg import OperationalError" to
                                 "from psycopg2 import OperationalError"
     *   0.1.11    04-09-2015  Non Threaded AutoCloseConnectionPool to use with pgpool
+    *   0.1.12    04-09-2015  Deleted class AutoCloseConnectionPool.
+                              - Create configuration in env PYPGWRAP_CLOSE_CONNECTION_ON_EXIT to control
+                                when pypgwrap disable pool. When this env variable is True, all connections
+                                is discarded when execution is finished. No pooling is persisted. Util to use with
+                                PgPool or external pooling tools.
 
 Author
 ------
