--- a/README
+++ b/README
@@ -307,6 +307,7 @@ Changelog
                                 when pypgwrap disable pool. When this env variable is True, all connections
                                 is discarded when execution is finished. No pooling is persisted. Util to use with
                                 PgPool or external pooling tools.
+    *   0.1.13    17-09-2015  Fix use of ast.literal_eval to read Environment variable
 
 Author
 ------
